force-app/main/default/objects/d4c_License__c/d4c_License__c.object-meta.xml
<CustomObject>
    <label>NIPR License</label>
    <nameField>
        <displayFormat>LIC-{0000}</displayFormat>
        <label>License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NIPR Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>