force-app/main/default/objects/d4c_License__c/fields/d4c_AllLOAsMatchedToProduct__c.field-meta.xml
<CustomField>
    <fullName>d4c_AllLOAsMatchedToProduct__c</fullName>
    <formula>d4c_NumberOfProductNotMatchedLOAs__c &lt;= 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All LOAs Matched To Product</label>
    <type>Checkbox</type>
</CustomField>