force-app/main/default/objects/d4c_License__c/fields/d4c_AsOfDate__c.field-meta.xml
<CustomField>
    <fullName>d4c_AsOfDate__c</fullName>
    <label>As Of Date</label>
    <type>Date</type>
</CustomField>