force-app/main/default/objects/d4c_License__c/fields/d4c_CeEndDate__c.field-meta.xml
<CustomField>
    <fullName>d4c_CeEndDate__c</fullName>
    <label>CE End Date</label>
    <type>Date</type>
</CustomField>