force-app/main/default/objects/d4c_License__c/fields/d4c_CEStateOrProvince_Code__c.field-meta.xml
<CustomField>
    <fullName>d4c_CEStateOrProvince_Code__c</fullName>
    <label>CE State Or Province Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>