force-app/main/default/objects/d4c_License__c/fields/d4c_EndDate__c.field-meta.xml
<CustomField>
    <fullName>d4c_EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>