force-app/main/default/objects/d4c_License__c/fields/d4c_Entity__c.field-meta.xml
<CustomField>
    <fullName>d4c_Entity__c</fullName>
    <label>Producer</label>
    <referenceTo>d4c_Entity__c</referenceTo>
    <relationshipName>Licenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>