force-app/main/default/objects/d4c_License__c/fields/d4c_IssueDate__c.field-meta.xml
<CustomField>
    <fullName>d4c_IssueDate__c</fullName>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>