force-app/main/default/objects/d4c_License__c/fields/d4c_License_Products__c.field-meta.xml
<CustomField>
    <fullName>d4c_License_Products__c</fullName>
    <label>License Products</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>