force-app/main/default/objects/d4c_License__c/fields/d4c_LicenseClassDescription__c.field-meta.xml
<CustomField>
    <fullName>d4c_LicenseClassDescription__c</fullName>
    <label>License Class Description</label>
    <type>TextArea</type>
</CustomField>