force-app/main/default/objects/d4c_License__c/fields/d4c_LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>d4c_LicenseNumber__c</fullName>
    <label>License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>