force-app/main/default/objects/d4c_License__c/fields/d4c_NumberOfProductMatchedLOAs__c.field-meta.xml
<CustomField>
    <fullName>d4c_NumberOfProductMatchedLOAs__c</fullName>
    <label># Of Product Matched LOAs</label>
    <summaryFilterItems>
        <field>d4c_LineOfAuthority__c.d4c_IsProductMatched__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>d4c_LineOfAuthority__c.d4c_License__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>