force-app/main/default/objects/d4c_License__c/fields/d4c_TypeCode__c.field-meta.xml
<CustomField>
    <fullName>d4c_TypeCode__c</fullName>
    <label>Type Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>