force-app/main/default/objects/d4c_License__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>d4c_LicenseNumber__c</columns>
    <columns>d4c_StatusCode__c</columns>
    <columns>d4c_StartDate__c</columns>
    <columns>d4c_EndDate__c</columns>
    <columns>d4c_StateOrProvinceCode__c</columns>
    <columns>d4c_Producer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>